Ingestion Pipeline with status callback